--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   php:
     container_name: janken
-    image: php:8.0-cli
+    build: .
     volumes:
       - ./src:/app
     working_dir: /app
